# micro_dwh

./: README.md  pyproject.toml
src/micro_dwh/: __init__.py
src/micro_dwh/postgresql/ods_private/: curated_list.sql  reddit_digest.sql
src/micro_dwh/s3/export_public/: curated_list.json  initial_curated_list.py  reddit_digest.json
src/micro_dwh/s3/import_private/: initial_curated_list.py  initial_pocket_export.py  reddit_request.py  request_laos_casualties.py  request_reddit.py
