[build-system]
requires = [
    "table_transfer @ git+https://github.com/smirnovkirilll/table_transfer.git",
]
build-backend = "hatchling.build"

[project]
name = "table_transfer"
version = "2025.08.08"
authors = [
  { name="Kirill Smirnov", gighub="https://github.com/smirnovkirilll" },
]
description = "Library helping organize personal micro data warehouse"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/smirnovkirilll/micro_dwh"
Issues = "https://github.com/smirnovkirilll/micro_dwh/issues"
